<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.CaiDatActivity">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00405d"
        android:elevation="8dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/btnThoat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            android:background="?attr/selectableItemBackgroundBorderless" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:layout_marginStart="16dp" />
    </androidx.appcompat.widget.Toolbar>

    <!-- Content Layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border_radiu_caidat"
            android:padding="8dp">

            <!-- User Info Card -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#333333"
                app:cardElevation="4dp"
                app:cardCornerRadius="20dp"
                android:layout_marginVertical="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:background="@drawable/profile_header_gradient"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/profile"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/profile_image" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Xin chào: "
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvTendangnhap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:textSize="20sp" />

                    <ImageButton
                        android:id="@+id/ivdangxuat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_logout_24"
                        android:paddingLeft="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Account Settings -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_settings"
                android:textSize="18sp"
                android:gravity="center"
                android:background="#00405d"
                android:textColor="@color/white"
                android:paddingVertical="8dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#333333"
                app:cardElevation="2dp"
                app:cardCornerRadius="8dp"
                android:layout_marginVertical="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:background="#DDDDDD"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tvThaydoiMk"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/change_password"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_right_24"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Dark Mode Switch -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#333333"
                app:cardElevation="2dp"
                app:cardCornerRadius="8dp"
                android:layout_marginVertical="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="#DDDDDD"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="16dp"
                        android:text="@string/dark_mode"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchDarkMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:thumbTint="#FF5722"
                        android:trackTint="#757575" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#333333"
                app:cardElevation="2dp"
                app:cardCornerRadius="8dp"
                android:layout_marginVertical="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="#DDDDDD"
                    android:padding="16dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/troGiup"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Help"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_right_24"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#333333"
                app:cardElevation="2dp"
                app:cardCornerRadius="8dp"
                android:layout_marginVertical="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:background="#DDDDDD"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tvVeChungToi"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/about"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_right_24"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#333333"
                app:cardElevation="2dp"
                app:cardCornerRadius="8dp"
                android:layout_marginVertical="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:background="#DDDDDD"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/admin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/admin"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_right_24"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#333333"
                app:cardElevation="2dp"
                app:cardCornerRadius="8dp"
                android:layout_marginVertical="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:background="#DDDDDD"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tvDangXuat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/logout"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
